--- a/Documentation/cleaning_openRefine.tex
+++ b/Documentation/cleaning_openRefine.tex
@@ -1,6 +1,5 @@
+\section{OpenRefine extension}
 
-
-\section{Cleaning Service}
 
 general description of service, its components and their functionalities
 
@@ -9,6 +8,33 @@ general description of service, its components and their functionalities
 \label{sec:cleaning}
 
 \subsection{Cleaning Workflow}
+
+\subsubsection{Extension Points}
+
+Picture of extension points.
+
+The described workflow is shown in the picture (screenshort of entry point).
+Required file formats. (reference to jena library)
+
+
+Generel description of two moduls. 
+Short description of each module - Open refine extension - interaktive cleaning required user involvment.
+
+Cleaning service - automatic cleaning.
+
+
+D3.2 presents a first version of cleaning workflow. 
+
+\subsubsection{Cleaning with OpenRefine}
+
+1. Display RDF data set in a table form with "`subject, predicate, object"' columns -  in order to provide understable data visualization.
+2. Identification of quality Problems (war described in D3.2 The changed UI is shown in figure...)
+3. Generation of cleaning suggestion (for some metrics, e.g Undefined classes or undefined properties were implemented extended suggestions).
+4. Application of cleaning rules
+5. Export of cleaned data (screenshort and available filr formats), Statistic report
+
+
+
 Cleaning workflow as a diagramm
 Description of each step separately:
 \begin{enumerate}
@@ -24,16 +50,31 @@ Ruslan
 
 
 \subsection{Technical Documentation}
+\subsubsection{Architecture design}
+UML diagramm
+
+\subsubsection{Prerequisites}
+updates ontologies, 
+new libraries
+
+
 
 
 \subsubsection{How to install}
+
+Install OpenRefine
+Check out extension
+
 Ruslan
 \subsubsection{How to run}
+
 Ruslan
 \
 
 
-\subsubsection{Extension Points}
+
+
+
 
 
 
