--- a/Documentation/D3.3.tex
+++ b/Documentation/D3.3.tex
@@ -18,13 +18,15 @@
 \usepackage{url}
 \usepackage{subcaption}
 \usepackage{listings}
-%\usepackage{csquotes}
+
+
 
 \usepackage{algorithm}
 %\usepackage{algorithmic}
 \usepackage{algpseudocode}
 \usepackage[textsize=footnotesize]{todonotes}
 \usepackage{lastpage}
+\usepackage{todonotes}
 
 % Changing TOC/LOF/LOT presentation
 
@@ -131,7 +133,7 @@ DIACHRON
 
 % Actual content beyond this point
 
-% \input{macros.tex}
+\input{macros.tex}
 
 
 \clearpage
@@ -144,7 +146,7 @@ DIACHRON
 
 
 \bibliographystyle{plain}
-\bibliography{biblioUBONN}
+\bibliography{aksw}
 
 \appendix
 
