--- a/Documentation/cleaning_service.tex
+++ b/Documentation/cleaning_service.tex
@@ -84,7 +84,7 @@ Where
 
 \item  HTTP status code 200 and the entity content, if the input parameters are correct and the get cleaning suggestion method has not fail:\\ \hspace*{0.2 cm} \{\\
  \hspace*{0.5 cm}"status" : "ok",\\ 
- \hspace*{0.5 cm}  "message" : "Quality report in one of \texttt{RDF} serialisations" \\ \hspace*{0.2 cm} \}
+ \hspace*{0.5 cm}  "message" : "Quality report in one of \texttt{RDF} serialisations." \\ \hspace*{0.2 cm} \}
 
 \item HTTP status code 400 and the entity content, if the input parameters are not correct:\\ \hspace*{0.2 cm} \{ \\
 \hspace*{0.5 cm} "status" : "error",\\
